Name:           whologin
Version:        3.0
Author:         Nils Schweinsberg

Cabal-Version:  >= 1.6
Build-Type:     Simple

Executable whologin
    Main-is:            Main.hs
    Hs-Source-Dirs:     src2

    build-depends:
        base                    == 4.*,
        mtl                     == 2.*,
        json                    == 0.4.*,
        snap                    == 0.4.*

