Name:           whologin
Version:        3.0
Author:         Nils Schweinsberg

Cabal-Version:  >= 1.6
Build-Type:     Simple

Executable whologin
    Main-is:            Main.hs
    Hs-Source-Dirs:     src

    build-depends:
        base                    == 4.*,
        mtl                     == 2.*,
        directory               == 1.*,
        filepath                == 1.*,
        time                    == 1.*,
        old-locale              == 1.*,
        network                 == 2.*,
        HTTP                    == 4000.*,
        json                    == 0.4.*,
        JSONb                   == 1.*,
        bytestring              == 0.9.*,
        bytestring-trie         == 0.2.*,
        utf8-string             == 0.3.*,
        snap                    == 0.4.*,
        snap-core               == 0.4.*,
        snap-server             == 0.4.*,
        blaze-html              == 0.4.*
